--- a/ncrypt.Server/Shared/_GenericCard.razor
+++ b/ncrypt.Server/Shared/_GenericCard.razor
@@ -25,7 +25,7 @@
             @if (Model.ConstructorParameters.Count() > 0)
             {
                 <hr class="mt-2 mb-2" />
-                <div class="row">
+                <div class="row ms-2">
                     @foreach (var prop in Model.ConstructorParameters)
                     {
                         <div class="d-flex justify-content-start align-items-center mb-1">
@@ -42,7 +42,7 @@
             @if (Model.GetParametersOfMethod(Model.SelectedMethod).Count() > 0)
             {
                 <hr class="mt-0 mb-2" />
-                <div class="row">
+                <div class="row ms-2">
                     @foreach (var prop in Model.GetParametersOfMethod(Model.SelectedMethod))
                     {
                         <div class="d-flex justify-content-start align-items-center mb-1">
